# capsem

./: .dockerignore  .gitignore  AGENTS.md  B3SUMS  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LATEST_RELEASE.md  Makefile  README.md  RELEASE.md  SECURITY.md  audit.toml  bootstrap.sh  codecov.yml  env.example  install.sh  justfile  pyproject.toml  release.sh  rust-toolchain.toml  test-dev-null.sh  test.py
capsem_proxy/: README.md  pyproject.toml  run_proxy.py
capsem_proxy/capsem_proxy/: capsem_integration.py
capsem_proxy/capsem_proxy/api/: gemini.py  openai.py  utils.py
capsem_proxy/config/: debug.toml  pii.toml
capsem_proxy/demo/: gemini_proxy.ipynb  openai_proxy.ipynb
capsem_proxy/tests/: test_config_loading.py  test_gemini_proxy.py  test_openai_proxy.py
capsem_python/: pyproject.toml
capsem_python/capsem/policies/: debug_policy.py
capsem_python/demos/policies/: pii-detection.ipynb
crates/capsem/: Cargo.toml  README.md  build.rs
crates/capsem-admin/: Cargo.toml
crates/capsem-admin/src/: main.rs  release_graph.rs
crates/capsem-agent/: Cargo.toml
crates/capsem-agent/src/: dns_proxy.rs  fs_watch.rs  main.rs  mcp_server.rs  net_proxy.rs  procfs.rs  vsock_io.rs
crates/capsem-agent/src/mcp_server/: tests.rs
crates/capsem-app/: Cargo.toml  build.rs  tauri.conf.json
crates/capsem-app/capabilities/: default.json
crates/capsem-app/icons/: icon.icns
crates/capsem-app/src/: assets.rs  boot.rs  cli.rs  commands.rs  gui.rs  logging.rs  main.rs  session_mgmt.rs  state.rs  vsock_wiring.rs
crates/capsem-app/src/commands/: logging.rs  mcp.rs  mod.rs  session.rs  settings.rs  terminal.rs  utilities.rs  vm_state.rs
crates/capsem-bench/: Cargo.toml
crates/capsem-bench/src/: main.rs
crates/capsem-core/: Cargo.toml
crates/capsem-core/benches/: dns_handler.rs  interp_anthropic.rs  mitm_pipeline.rs  parser_jsonrpc.rs  parser_sse.rs  policy.rs  policy_v2.rs  provider_model_parser.rs  security_actions.rs  security_packs.rs
crates/capsem-core/benches/baselines/: T0-pre-rewrite.md
crates/capsem-core/examples/: dns_fixture_gen.rs
crates/capsem-core/fuzz/: .gitignore  Cargo.toml  README.md
crates/capsem-core/fuzz/fuzz_targets/: build_nxdomain.rs  build_servfail.rs  parse_query.rs  round_trip.rs
crates/capsem-core/src/: asset_manager.rs  auto_snapshot.rs  build_info.rs  credential_broker.rs  file_security_events.rs  fs_monitor.rs  host_config.rs  host_state.rs  image.rs  ipc_ext.rs  ipc_handshake.rs  lib.rs  log_layer.rs  macros.rs  manifest_compat.rs  paths.rs  poll.rs  process_security_events.rs  profile_manifest.rs  profile_payload_schema.rs  security_packs.rs  session.rs  setup_state.rs  telemetry.rs  uds.rs
crates/capsem-core/src/auto_snapshot/: tests.rs
crates/capsem-core/src/credential_broker/: tests.rs
crates/capsem-core/src/file_security_events/: tests.rs
crates/capsem-core/src/fs_monitor/: tests.rs
crates/capsem-core/src/gateway/: ai_body.rs  anthropic.rs  audit.rs  events.rs  google.rs  mod.rs  openai.rs  pricing.rs  provider.rs  request_parser.rs  server.rs  sse.rs  streaming.rs
crates/capsem-core/tests/: gateway_integration.rs  mitm_integration.rs  platform_gating.rs  profile_schema.rs  security_packs.rs  settings_spec.rs  vm_integration.rs
crates/capsem-file-engine/: Cargo.toml
crates/capsem-file-engine/src/: lib.rs  tests.rs
crates/capsem-gateway/: Cargo.toml
crates/capsem-gateway/src/: auth.rs  cors.rs  main.rs  metrics.rs  proxy.rs  status.rs  terminal.rs
crates/capsem-guard/: Cargo.toml
crates/capsem-guard/src/: lib.rs  tests.rs
crates/capsem-logger/: Cargo.toml
crates/capsem-logger/benches/: db_read_write_micro.rs  db_writer_pressure.rs
crates/capsem-logger/src/: db.rs  events.rs  lib.rs  reader.rs  schema.rs  session_index.rs  session_types.rs  writer.rs
crates/capsem-logger/tests/: roundtrip.rs
crates/capsem-mcp/: Cargo.toml
crates/capsem-mcp-aggregator/: Cargo.toml
crates/capsem-mcp-aggregator/src/: main.rs  metrics_debug.rs  tests.rs
crates/capsem-mcp-builtin/: Cargo.toml
crates/capsem-mcp-builtin/src/: main.rs  metrics_debug.rs
crates/capsem-mcp/src/: main.rs  tests.rs
crates/capsem-mock-server/: Cargo.toml
crates/capsem-mock-server/src/: lib.rs  main.rs
crates/capsem-network-engine/: Cargo.toml
crates/capsem-network-engine/src/: ai_provider.rs  dns_parser.rs  dns_security.rs  dns_transport.rs  domain_policy.rs  http_policy.rs  http_security.rs  lib.rs  mcp_security.rs  model_evidence.rs  model_request.rs  model_security.rs  model_stream.rs
crates/capsem-process/: Cargo.toml
crates/capsem-process/src/: helpers.rs  ipc.rs  job_store.rs  main.rs  mcp_runtime.rs  metrics_debug.rs  pty_log.rs  runtime_config.rs  terminal.rs  vsock.rs
crates/capsem-proto/: Cargo.toml  README.md  build.rs
crates/capsem-proto/benches/: vsock_framing_micro.rs
crates/capsem-proto/src/: handshake.rs  ipc.rs  lib.rs  metrics.rs  policy_context.rs  poll.rs  tests.rs
crates/capsem-security-engine/: Cargo.toml
crates/capsem-security-engine/benches/: detection_ir.rs  security_engine_cel.rs
crates/capsem-security-engine/fixtures/: ai-interaction-evidence-v1.json  resolved-event-v1.json  security-events-v1.json
crates/capsem-security-engine/src/: detection_ir.rs  lib.rs  tests.rs
crates/capsem-security-engine/tests/: detection_ir.rs
crates/capsem-service/: Cargo.toml
crates/capsem-service/src/: api.rs  asset_supervisor.rs  debug_report.rs  errors.rs  fs_utils.rs  lib.rs  main.rs  naming.rs  registry.rs  saved_vm_assets.rs  startup.rs  tests.rs  triage.rs
crates/capsem-tray/: Cargo.toml  build.rs
crates/capsem-tray/src/: gateway.rs  icons.rs  main.rs  menu.rs
crates/capsem-tui/: Cargo.toml
crates/capsem-tui/src/: app.rs  fixture.rs  gateway_provider.rs  lib.rs  main.rs  main_tests.rs  model.rs  provider.rs  terminal.rs  tests.rs  ui.rs
crates/capsem/src/: client.rs  completions.rs  main.rs  paths.rs  platform.rs  profile_catalog_source.rs  service_install.rs  setup.rs  shell_exit.rs  status.rs  support_bundle.rs  uninstall.rs  update.rs
(+2246 files in other folders)
