[workspace]
resolver = "2"
members = ["crates/capsem-proto", "crates/capsem-core", "crates/capsem-app", "crates/capsem-agent", "crates/capsem-logger"]

[workspace.package]
version = "0.14.3"

# Always optimize blake3 -- its SIMD assembly is 100x faster than
# unoptimized Rust. Without this, debug-build hashing takes 24s for 2GB.
[profile.dev.package.blake3]
opt-level = 3

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
humantime = "2"
objc2 = "0.6"
objc2-virtualization = { version = "0.3", features = [
    "VZVirtioFileSystemDeviceConfiguration",
    "VZSharedDirectory",
    "VZSingleDirectoryShare",
    "VZDirectoryShare",
    "VZDirectorySharingDeviceConfiguration",
] }
objc2-foundation = "0.3"
block2 = "0.6"
dispatch2 = "0.2"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
time = "0.3"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
webpki-roots = "0.26"
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
http-body-util = "0.1"
http = "1"
axum = "0.8"
reqwest = { version = "0.13", features = ["stream", "json", "query", "rustls"], default-features = false }
futures = "0.3"
tokio-stream = "0.1"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
tokio-util = { version = "0.7", features = ["io"] }
base64 = "0.22"
regex = "1"
