[workspace]
resolver = "2"
members = [
    "crates/capsem-proto",
    "crates/capsem-core",
    "crates/capsem-app",
    "crates/capsem-agent",
    "crates/capsem-logger",
    "crates/capsem-process",
    "crates/capsem-service",
    "crates/capsem-admin",
    "crates/capsem",
    "crates/capsem-bench",
    "crates/capsem-tui",
    "crates/capsem-mcp",
    "crates/capsem-mcp-aggregator",
    "crates/capsem-mcp-builtin",
    "crates/capsem-mock-server",
    "crates/capsem-tray",
    "crates/capsem-gateway",
    "crates/capsem-guard",
]

[workspace.package]
version = "1.5.1784501682"
edition = "2021"
rust-version = "1.91"
license = "Apache-2.0"
description = "The fastest way to ship with AI securely."
homepage = "https://capsem.org"
repository = "https://github.com/google/capsem"
authors = ["Elie Bursztein <github@elie.net>"]

# Always optimize blake3 -- its SIMD assembly is 100x faster than
# unoptimized Rust. Without this, debug-build hashing takes 24s for 2GB.
[profile.dev.package.blake3]
opt-level = 3

# Always optimize hot wire-format codecs in dev/install builds. `just install`
# and manual release validation use debug binaries, so leaving these crates at
# opt-level 0 makes the gateway and ledger paths look broken when the real bug is
# compiler configuration.
[profile.dev.package.serde]
opt-level = 3

[profile.dev.package.serde_core]
opt-level = 3

[profile.dev.package.serde_json]
opt-level = 3

[profile.dev.package.rmp]
opt-level = 3

[profile.dev.package."rmp-serde"]
opt-level = 3

[profile.dev.package.hickory-proto]
opt-level = 3

[profile.dev.package.memchr]
opt-level = 3

[profile.dev.package.itoa]
opt-level = 3

[profile.dev.package.ryu]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[workspace.lints.rust]
warnings = "deny"

# clippy 1.95 introduced three lints that flag patterns we use throughout
# the codebase intentionally. Allow them workspace-wide rather than
# refactoring 100+ call sites:
#   - collapsible_match: `match { Some(x) => if ... }` is clearer than
#     `match { Some(x) if ... => }` when the guard has a side effect.
#   - unnecessary_sort_by: `sort_by(|a,b| a.1.cmp(&b.1))` reads fine; the
#     `sort_by_key` rewrite isn't always cleaner when the key isn't Copy.
#   - doc_overindented_list_items: triggers on continuation lines under
#     `///` list items; we use explicit indentation for readability.
[workspace.lints.clippy]
collapsible_match = "allow"
unnecessary_sort_by = "allow"
doc_overindented_list_items = "allow"
dbg_macro = "deny"
todo = "deny"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_yaml = "0.9"
rmp-serde = "1.3.0"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled", "hooks", "serialize"] }
humantime = "2"
objc2 = "0.6"
objc2-virtualization = { version = "0.3", features = [
    "VZVirtioFileSystemDeviceConfiguration",
    "VZSharedDirectory",
    "VZSingleDirectoryShare",
    "VZDirectoryShare",
    "VZDirectorySharingDeviceConfiguration",
] }
objc2-foundation = "0.3"
block2 = "0.6"
dispatch2 = "0.2"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
time = "=0.3.47"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
webpki-roots = "0.26"
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
http-body-util = "0.1"
http = "1"
axum = "0.8"
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls-webpki-roots"], default-features = false }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
tokio-util = { version = "0.7", features = ["io"] }
sse-stream = "=0.2.4"
base64 = "0.22"
bytes = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30"
tokio-unix-ipc = "0.4"
rmcp = { version = "1.3", features = ["client", "server"] }
# Low-level DNS protocol (wire-format codec). Used host-side by the
# capsem DNS proxy (T3) to parse guest queries, build NXDOMAIN
# responses for blocked domains, and forward allowed queries upstream.
# The agent crate uses raw bytes only; hickory is host-side only.
hickory-proto = { version = "0.26", default-features = false, features = ["std"] }
