[project]
name = "capsem-proxy"
version = "0.1.0"
description = "Multi-tenant LLM proxy with CAPSEM security policy enforcement"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.2",
    "google-genai>=1.42.0",
    "httpx>=0.28.1",
    "openai>=1.59.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
    "capsem>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
