[package]
name = "capsem-admin"
version.workspace = true
edition = "2021"
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "capsem-admin"
path = "src/main.rs"

[dependencies]
capsem-core = { path = "../capsem-core" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
