[package]
name = "capsem-agent"
version.workspace = true
edition = "2021"

[[bin]]
name = "capsem-pty-agent"
path = "src/main.rs"

[[bin]]
name = "capsem-net-proxy"
path = "src/net_proxy.rs"

[[bin]]
name = "capsem-mcp-server"
path = "src/mcp_server.rs"

[[bin]]
name = "capsem-fs-watch"
path = "src/fs_watch.rs"

[dependencies]
nix = { version = "0.29", features = ["fs", "ioctl", "inotify", "poll", "term", "signal", "process"] }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
capsem-proto = { path = "../capsem-proto" }
tokio = { workspace = true, features = ["full"] }
signal-hook = "0.4.3"
