[package]
name = "capsem-ui"
version.workspace = true
edition = "2021"

[[bin]]
name = "capsem-ui"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }
