[package]
name = "capsem-app"
version.workspace = true
edition = "2021"
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "capsem-app"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
# C3: only the protocol-version + schema_hash constants. Does NOT pull in
# capsem-core or hypervisor code, so the "thin Tauri shell" invariant
# (no VM logic in capsem-app) is preserved. capsem-proto is a leaf crate
# with serde/rmp deps only.
capsem-proto = { path = "../capsem-proto" }

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
