[package]
name = "capsem-core"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-unix-ipc.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
capsem-proto = { path = "../capsem-proto" }
capsem-logger = { path = "../capsem-logger" }
libc = "0.2"
blake3 = "1"
toml = { workspace = true }
rusqlite = { workspace = true }
humantime = { workspace = true }
rcgen = { workspace = true }
time = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
http = { workspace = true }
pin-project-lite = "0.2"
reqwest = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
async-compression = { workspace = true }
tokio-util = { workspace = true }
bytes = "1"
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
regex = { workspace = true }
scraper = "0.25"

rmcp = { version = "1.2", features = ["client", "transport-streamable-http-client-reqwest", "reqwest"] }
ego-tree = "0.10"
notify = "7"
walkdir = "2"

# Linux-only: KVM hypervisor backend
[target.'cfg(target_os = "linux")'.dependencies]
vm-fdt = "0.3"

# macOS-only: Apple Virtualization.framework bindings
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-virtualization = { workspace = true }
objc2-foundation = { workspace = true }
block2 = { workspace = true }
dispatch2 = { workspace = true }
core-foundation-sys = "0.8"

[dev-dependencies]
tempfile = "3"
dotenvy = "0.15"
