[package]
name = "capsem-file-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
blake3 = "1"
capsem-logger = { path = "../capsem-logger" }
capsem-security-engine = { path = "../capsem-security-engine" }

[lints]
workspace = true
