[package]
name = "capsem-gateway"
version.workspace = true
edition = "2021"

[[bin]]
name = "capsem-gateway"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
http.workspace = true
bytes.workspace = true
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
rand = "0.9"
tokio-tungstenite = "0.29.0"
futures.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
futures.workspace = true
