[package]
name = "capsem-guard"
version.workspace = true
edition = "2021"
rust-version.workspace = true
license.workspace = true
description = "Parent-watch + singleton flock primitives for capsem companion processes (gateway, tray)."
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
libc = "0.2"
tracing = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
