[package]
name = "capsem-logger"
version.workspace = true
edition = "2021"
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rusqlite = { workspace = true }
humantime = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = "1"
uuid = { version = "1", features = ["v4"] }
metrics = "0.24"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
metrics-util = "0.19"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "db_writer_pressure"
harness = false
