[package]
name = "capsem-mcp-aggregator"
version.workspace = true
edition = "2021"
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
capsem-core = { path = "../capsem-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics-util = "0.19"
reqwest.workspace = true
clap = { workspace = true, features = ["derive"] }
capsem-guard = { path = "../capsem-guard" }

[lints]
workspace = true
