[package]
name = "capsem-mcp-builtin"
version.workspace = true
edition = "2021"
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
capsem-core = { path = "../capsem-core" }
capsem-logger = { path = "../capsem-logger" }
rmcp = { workspace = true, features = ["server", "transport-io"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
regex.workspace = true
scraper = "0.25"
walkdir = "2"
blake3 = "1"
capsem-guard = { version = "1.0.1776688771", path = "../capsem-guard" }

[lints]
workspace = true
