[package]
name = "capsem-network-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
hickory-proto.workspace = true

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
