[package]
name = "capsem-network-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
blake3 = "1"
capsem-logger = { path = "../capsem-logger" }
capsem-security-engine = { path = "../capsem-security-engine" }
flate2 = "1"
hickory-proto.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
